<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="calculate">CALCULATE</string>
    <string name="speed_calculator">SPEED CALCULATOR</string>
    <string name="clear">CLEAR</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="enter_distance_enter">Enter distance (Enter)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="Distanceandtimearerequired">Distance and time are required.</string>
    <string name="Timemustbegreaterthanzero">Time must be greater than zero.</string>
    <string name="Speedisoverlimit">Speed is over limit!</string>
</resources>